<resources>
    <string name="app_name">BRAC Education Program</string>
    <string name="at_a_glance">At a glance</string>
    <string name="education_programme">Education Programme</string>
    <string name="brac_primary_schools">BRAC primary schools</string>
    <string name="brac_sre_srimary_schools">BRAC pre-primary schools</string>
    <string name="shishu_niketon">Shishu niketon</string>
    <string name="education_support_programme">Education support programme</string>
    <string name="early_childhood_development">Early childhood development</string>
    <string name="working_with_mainstream_secondary_schools">Working with mainstream secondary schools</string>
    <string name="adolescent_development_programme">Adolescent development programme</string>
    <string name="multipurpose_community_learning_centres">Multipurpose community learning centres</string>
    <string name="inclusive_education">Inclusive education</string>
    <string name="open_drawer">Open Navigation Drawer</string>
    <string name="close_drawer">Close Navigation Drawer</string>
    <string name="overview">Overview</string>
    <string name="management_services">Management Services</string>
    <string name="at_a_news">Establishing education programmes in six countries (Bangladesh, Afghanistan, Pakistan, Uganda, South Sudan, Sierra Leone and the Philippines), BRAC has built the largest secular, private education system in the world, with more than 900,000 students enrolled in BRAC primary schools.

The high-impact and low-cost model of BRAC’s primary schools give disadvantaged students a second chance at learning. In collaboration with BRAC University-BRAC Institute of Education Development (BU-BIED) and BRAC Health Nutrition Population Programme (HNPP), we have introduced a centre-based learning, two-year pilot project known as shishu bikash kendro (SBK) for three year-old children. This early childhood development initiative aims to strengthen child health and support, ensuring holistic development (physical and cognitive development), and enhance  learning ability.
Complementing mainstream school systems with innovative teaching methods and materials, BRAC establishes primary schools in communities, which are not accessed by formal education systems. Through this endeavour, we bring education to millions of children, particularly those affected by violence, displacement, discrimination or extreme poverty in rural areas as well as urban slums. We have made primary school education available to children in areas that are seasonally submerged under water by introducing boat schools.

As another new initiative, we have introduced schools for dropout children, targeting students who have never been enrolled in any formal school or have dropped out of school within the first three years.This has been piloted in both rural and urban areas. Enrolling in these schools instead of BRAC’s primary schools reduces repetition by following five-year courses and also saves one year of schooling. Underprivileged children are targeted at the pre-primary level with the goal of preparing them to enter mainstream primary schools. We also reach out to children from ethnic communities and those with special needs. Our hands on, rhythmic and kinaesthetic development approach, particularly in pre-primary and primary education, has promoted co-curricular activities that help in the holistic development of children.

The programme provides needs-based training to teachers and school management committees in secondary schools on capacity building. It implements mentoring initiatives by involving students in extracurricular and group activities to boost attendance and reduce dropout rate in underperforming rural secondary schools. Furthermore, by introducing innovative e-learning method in secondary schools we plan to significantly improve learning environment and results in board examinations.

Scholarship programmes are also available that provide financial support to talented students by paying for their college or university tuition fees, at home and abroad.

We are giving increasing attention to adolescents and youth as a special group, offering them life skills, livelihood and skills development training, as well as basic   education and financial services. In BRAC’s adolescent clubs, peer-driven initiatives are taken to enhance personal growth and social skills. Our multipurpose community learning centres promote reading, especially through mobile libraries for those who cannot travel far from their houses. It also works towards creating self-employment opportunities among the rural youth.
    </string>
    <string name="at_a_pub_time">Friday, 15 January 2016 18:00</string>
    <string name="read_more">Read More</string>
    <string name="show_less">Show Less</string>
    <string name="tbg">Tracking of BRAC graduates (TBG) programme</string>
    <string name="new_interventions">New interventions</string>
    <string name="front_page">BRAC’s education programme (BEP) has become the largest
        secular and private education system in the world, reaching seven countries.
        BRAC’s non-formal primary schools are designed to give a second chance at learning to disadvantaged
        children left out of the formal education system due to extreme poverty, violence,
        displacement or discrimination. We complement the mainstream school system with innovative teaching
        methods and materials. At the secondary level, we provide need-based training and support for both
        teachers and students. Our e-learning materials improve mainstream education, and mobile libraries
        promote reading and access to IT facilities for the community. We prioritise adolescents and youth,
        offering life skills and livelihood development training,
        savings and financial services, and much more.</string>
    <string name="overview_details">"
        <p>Establishing education programmes in six countries (Bangladesh, Afghanistan, Pakistan, Uganda, South Sudan, Sierra Leone and the Philippines), BRAC has built the largest secular, private education system in the world, with more than 900,000 students enrolled in BRAC primary schools.</p>
        <br></br><br></br>
        <p>The high-impact and low-cost model of BRAC’s primary schools give disadvantaged students a second chance at learning. In collaboration with BRAC University-BRAC Institute of Education Development (BU-BIED) and BRAC Health Nutrition Population Programme (HNPP), we have introduced a centre-based learning, two-year pilot project known as shishu bikash kendro (SBK) for three year-old children. This early childhood development initiative aims to strengthen child health and support, ensuring holistic development (physical and cognitive development), and enhance  learning ability.
Complementing mainstream school systems with innovative teaching methods and materials, BRAC establishes primary schools in communities, which are not accessed by formal education systems. Through this endeavour, we bring education to millions of children, particularly those affected by violence, displacement, discrimination or extreme poverty in rural areas as well as urban slums. We have made primary school education available to children in areas that are seasonally submerged under water by introducing boat schools. </p>
        <br></br> <br></br>
        <p>As another new initiative, we have introduced schools for dropout children, targeting students who have never been enrolled in any formal school or have dropped out of school within the first three years.This has been piloted in both rural and urban areas. Enrolling in these schools instead of BRAC’s primary schools reduces repetition by following five-year courses and also saves one year of schooling. Underprivileged children are targeted at the pre-primary level with the goal of preparing them to enter mainstream primary schools. We also reach out to children from ethnic communities and those with special needs. Our hands on, rhythmic and kinaesthetic development approach, particularly in pre-primary and primary education, has promoted co-curricular activities that help in the holistic development of children.</p>
        <br></br> <br></br>
        <p>The programme provides needs-based training to teachers and school management committees in secondary schools on capacity building. It implements mentoring initiatives by involving students in extracurricular and group activities to boost attendance and reduce dropout rate in underperforming rural secondary schools. Furthermore, by introducing innovative e-learning method in secondary schools we plan to significantly improve learning environment and results in board examinations.</p>
        <br></br> <br></br>
        <p>Scholarship programmes are also available that provide financial support to talented students by paying for their college or university tuition fees, at home and abroad</p>
        <br></br> <br></br>
        <p>We are giving increasing attention to adolescents and youth as a special group, offering them life skills, livelihood and skills development training, as well as basic   education and financial services. In BRAC’s adolescent clubs, peer-driven initiatives are taken to enhance personal growth and social skills. Our multipurpose community learning centres promote reading, especially through mobile libraries for those who cannot travel far from their houses. It also works towards creating self-employment opportunities among the rural youth.</p>"
    </string>
    <string name="ecd_details">
        "<p>In the quest to ensure qualitative early childhood education for children of ages 3-5 and prop up national stipulation, BRAC Education Programme launched a two-year integrated play-based early childhood development (ECD) centre in collaboration with BRAC-Institute of Educational Development (BIED) and BRAC Health, Nutrition and Population Programme. A total of 20 ECD centres were opened in Muktagacha and Mymensing in January 2014. Having immense community response, 220 more centres were opened in 2015 in five upazilas ie, Mymensing Sadar, Gouripur, Trishal, Fulbaria, Muktagacha and Gaforgaon of Mymensing district.</p>
        <br></br> <br></br>
        <p>The aim of this intervention is to stimulate children’s learning capability in a playful environment, improve children’s health and nutrition and raise community awareness.</p>
        <br></br> <br></br>
        <b>Key features</b>
        <br></br><br></br>

        * One-room centre,  3 to 5-year-old children.<br></br>
        * No tuition fees and flexible school timing.<br></br>
        * Class duration 2 hours, 5 days in a week.<br></br>
        * Play-based curriculum<br></br>
        * Group learning and emphasis on participatory activities<br></br>
        * Needs-based curriculum material<br></br>
        * Well trained staffs and caregivers on ECD<br></br>
        * Participation of parents and community<br></br>
        * Mothers volunteering in the centre<br></br>
        * Outdoor play space Home visit by caregivers Health check-ups"
    </string>
</resources>